# VulkanEngine

./: CMakeLists.txt  Vulkan.sln  vcpkg.json
Vulkan/: AnimationLoader.cpp  AnimationLoader.h  CMakeLists.txt  Engine.cpp  Engine.h  Main.cpp  Mesh.cpp  Mesh.h  Utilites.h  Vulkan.vcxproj  Vulkan.vcxproj.filters  VulkanRenderer.cpp  VulkanRenderer.h
Vulkan/Shaders/: compileshaders.bat  compileshaders.bat.bak  frag.spv  shader.frag  shader.frag.bak  shader.vert  shader.vert.bak  vert.spv
